--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
     <div class="col">
         <!-- <img class="footer-logo"  src="./img/img-1.png" alt="logo"> -->
         <h4 class="contact">Contact</h4>
-        <p> <Strong><i class="bx bx-map"></i>Address:</Strong><span> 462 Delhi, Street 32.</span></p>
+        <p> <Strong><i class="bx bx-map"></i>	&nbsp;Address:</Strong><span> 462 Delhi, Street 32.</span></p>
           <p> <Strong><i class="bx bx-phone"></i> Phone:</Strong> <span>+91 2222 345 234</span> </p>
-          <p> <Strong><i class="bx bx-time " ></i>Hours:</Strong><span>10:00 - 18:00,Mon-Sat</span></p>
+          <p> <Strong><i class="bx bx-time"></i>	&nbsp;Hours:</Strong><span>10:00 - 18:00,Mon-Sat</span></p>
           <!-- <p> <Strong><i class="bx bx-email"></i>Email:</Strong><span>10:00 - 18:00,Mon-Sat</span></p> -->
 
         <!-- <p> <Strong>Address:</Strong> 462 Delhi, Street 32.
