some color changes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
        <li><a href="#">Blogs</a></li>
        <li id="nav-items"><a href="#contact">Contact </a></li>
        <div class="search">
-         <input type="text" name="search" id="search" placeholder=" Search on Baoiam">
+         <input type="text" name="search" id="search" placeholder=" Search on BAOIAM">
            <li class="fas fa-search"></li>
        </div>
        <button class="nav_btn">Login</button>
@@ -141,14 +141,9 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
  <h1>Unlock the full<br>
   potential,<br>
           Upgrade your<br>
-          <span style="color:rgba(249,67,7,1)">S</span>
-    <span style="color:rgba(249,67,7,1)">K</span>
-    <span style="color:rgb(246, 102, 18)">i</span>
-    <span style="color:rgb(246, 102, 18) ">l</span>
-    <span style="color: #fb8721">l</span>
-    <span style="color:#fb8721">s</span>
+      
 
-              <!-- <span>Skills.</span> -->
+              <span style="color: rgba(249,67,7,1); ">Skills.</span>
 
           <!-- <span>Skills.</span> -->
         </h1>
@@ -273,42 +268,6 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     <p>We have courses mentored by more than 350+ industrail experts</p>  
 </div>
 
-
-<!-- <div class="part1">
-  <center>
-      <img src="depositphotos_393896416-stock-illustration-outline-online-learning-icon-online.jpg" alt="">
-      <h4>12500+ Hrs of Learning</h4>
-      <p style="color: blue;"><b>We have already crossed 12500+ Hrs of learning on this platform</b></p>
-  </center>
-</div>
-<div class="part2">
-  <center>
-      <img src="1087927.png" alt="">
-      <h4>500+ Projects</h4>
-      <p style="color: blue;"><b>BAOIAM has excelled in 500+ realtime Corporate & client projects</b></p>
-  </center>
-
-</div>
-
-<div class="part3">
-  <center>
-      <img src="pngtree-vector-male-student-icon-png-image_4255019.jpg" alt="">
-      
-      <h4>75000+ Students</h4>
-      <p style="color: blue;"><b>75000+ students learning from all over the world anytime</b></p>
-  </center>
-
-</div>
-<div class="part4">
-  <center>
-      <img src="424-4242151_industry-expert-expert-human-icon-expert-icon.png" alt="">
-      <h4>350+ Industrial Experts </h4>
-      <p style="color: blue;"><b>We have courses mentored by more than 350+ industrail experts</b></p>
-  </center>
-
-
-
-</div>  -->
 
 </div>
 </section>
