Adding contact section

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
   </div>
 
   <div class="about-text">
-    <h2>Expand Your <span>Horizons</span>,Enhance Your Skills</h2>
+    <h2>Expand Your <span>Horizons ,</span>Enhance Your Skills</h2>
     <p>BAOIAM is an E- Learning platform that focuses on the overall
       skill development of its learners by furnished courses
       in a variety of disciplines that can help anyone level theri skill &
@@ -372,28 +372,20 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
 
 
 
-
-
-
   <section class="expert-swiper">
 <div class="expert-heading">
     <div class="head">
  <h1>Meet Our Experts</h1>
-    
 </div>
-
-  
 <div class="head1">
   <p>BAOIAM students get mentored by experts who have achieved mastery in thier 
     respective domain and are passionate about helping students achieve their dreams. </p>
-
  </div>
 </div>
 
 <div  dir="rtl" class="swiper mySwiperr ">
 
   <div class="swiper-wrapper">
- 
 <div class="swiper-slide">
   <div class="expert" > 
    <img src="images/e3.jpg" /> 
@@ -409,8 +401,6 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
       <h6>UI/UX Designer</h6>
   </div>
 </div>
-
-
 <div class="swiper-slide">
     <div class="expert" > 
    <img src="images/e6.jpg"/> 
@@ -418,7 +408,6 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
    <h6>Programmer</h6>
   </div>
 </div>
-
 <div class="swiper-slide">
     <div class="expert" > 
      <img src="images/e3.jpg" /> 
@@ -434,8 +423,6 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
    <h6>Programmer</h6>
   </div>
 </div>
-
-
   </div>
   <div class="swiper-button-next"></div>
   <div class="swiper-button-prev"></div>
@@ -446,6 +433,29 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
 
 
 
+
+<section class="contact-main">
+<div class="contact-container">
+  <div class="contact-item1">
+    <h1>Contact Us for more information!</h1>
+  <!-- <h6>Do you have any queries? react out to us and we are happy to help you !</h6> -->
+    <p>Do you have any queries? react out to us and we are happy to help you !</p>
+    </div>
+  <div class="contact-item2">
+    <div class="contact-menu" >
+      <i class="fa fa-phone" ></i>
+        <div>
+    <h3>Call us</h3>
+    <h4>+91 9992754999</h4>
+</div>
+   </div> 
+
+  <button class="btn">Get in Touch</button>
+    </div>
+
+</div>
+
+</section>
 
 
 
@@ -505,11 +515,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
           <a href="#"><i class="fab fa-telegram"></i></a>
               </div>
   </div>
-
     </div>
-
-
-
 </div>
 
 <div class="sub-footer">
