--- a/index.html
+++ b/index.html
@@ -593,6 +593,19 @@ href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
 </section>
 
 
+<section>
+<div class="mnc-top">
+<h2>We are associated with businesses and non-profits from <span>startups to MNC's</span> </h2>
+<div class="mnc-img">
+  <img src="images/mnc1.jpg" alt="">
+  <img src="images/mnc2.jpg" alt="">
+  <img src="images/mnc3.jpg" alt="">
+  <img src="images/mmnc4.jpg" alt="">
+  <img src="images/mnc5.jpg" alt="">
+
+</div>
+</div>
+</section>
 
 <!-- contact -->
 
